--- a/assignment3/Assignment3.ipynb
+++ b/assignment3/Assignment3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "((1052, 12), (43, 13))"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "909              Henry Dunant , Peace, 1901  1901  "
       ]
      },
-     "execution_count": 289,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "(142, 12)"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "Name: flag_country_check, dtype: int64"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "2  Vladimir Prelog *,  born in then  Austria–Hung...  1975                   1  "
       ]
      },
-     "execution_count": 297,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "2  Vladimir Prelog *,  born in then  Austria–Hung...  1975                   1  "
       ]
      },
-     "execution_count": 299,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "919                   0  "
       ]
      },
-     "execution_count": 300,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "(874, 13)"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
        "919  1911                   0  "
       ]
      },
-     "execution_count": 303,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
    "source": [
     "The sub-set of columns category, date of birth, gender and year used to exclude duplicates as the category, date of birth, gender and year combination of columns must be identical, although the country and name differ in the entries.\n",
     "\n",
-    "Note: we can also use date_of_death, place_of_birth, place_of_death as sub-set columns but the combination category, date of birth, gender and year is already unique (verified with current dataset). The solution does not work if the nobel price is shared by two people who born on the same date of birth."
+    "Note: we can also use date_of_death, place_of_birth, place_of_death as sub-set columns but the combination category, date of birth, gender and year is already unique (verified with current dataset). The solution does not work if the nobel price is shared by two same gender people and born on the same date of birth."
    ]
   },
   {
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
        "Name: category, dtype: int64"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
        "820                   1  "
       ]
      },
-     "execution_count": 305,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
        "989                    1  "
       ]
      },
-     "execution_count": 307,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,8 +1563,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 9 gender incomplete entries. 6 out of 9 entries have no gender as they serve non-personal institutes, but 3 out of 9 are gender missing, may be data entry problem. Using below code, removed the rows filled with na."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1580,7 @@
        "(865, 13)"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1584,10 +1591,64 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>born_in</th>\n",
+       "      <th>category</th>\n",
+       "      <th>country</th>\n",
+       "      <th>date_of_birth</th>\n",
+       "      <th>date_of_death</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>link</th>\n",
+       "      <th>name</th>\n",
+       "      <th>place_of_birth</th>\n",
+       "      <th>place_of_death</th>\n",
+       "      <th>text</th>\n",
+       "      <th>year</th>\n",
+       "      <th>flag_country_check</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [born_in, category, country, date_of_birth, date_of_death, gender, link, name, place_of_birth, place_of_death, text, year, flag_country_check]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "There are 9 gender incomplete entries. 6 out of 9 entries have no gender as they serve non-personal institutes, but 3 out of 9 are gender missing, may be data entry problem."
+    "df_nobel_fil_dedup[df_nobel_fil_dedup['gender'].isnull() | df_nobel_fil_dedup['gender'].isna()]"
    ]
   },
   {
@@ -1599,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1731,7 @@
        "782            NaN  Hiroshi Amano , Physics, 2014  2014                   0  "
       ]
      },
-     "execution_count": 309,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is 1 entry with missing date_of_birth. This could also be a problem with data entry."
+    "There is 1 entry with missing date_of_birth. This could also be a problem with data entry. We can find date of birth of Hiroshi Amano in wikipedia."
    ]
   },
   {
@@ -1732,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1802,7 @@
        "(43, 13)"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1761,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1783,17 +1844,17 @@
        "<Figure size 432x288 with 0 Axes>"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a291ca470>]"
+       "[<matplotlib.lines.Line2D at 0x1a25841048>]"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1803,7 +1864,7 @@
        "Text(0.5, 0, 'Number of Components')"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1813,7 +1874,7 @@
        "Text(0, 0.5, 'Variance (%)')"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1823,7 +1884,7 @@
        "Text(0.5, 1.0, 'JudgeRatings Dataset Explained Variance')"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1858,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1867,17 +1928,17 @@
        "<Figure size 432x288 with 0 Axes>"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a291ecba8>]"
+       "[<matplotlib.lines.Line2D at 0x1a259e39b0>]"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1887,7 +1948,7 @@
        "Text(0.5, 0, 'Component')"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1897,7 +1958,7 @@
        "Text(0, 0.5, 'Eigenvalue')"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1907,7 +1968,7 @@
        "Text(0.5, 1.0, 'JudgeRatings Dataset Eigenvalues')"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1950,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2203,7 +2264,7 @@
        "RTEN -0.221390 -0.756459 -0.249933  0.285514 -0.080268  "
       ]
      },
-     "execution_count": 315,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2216,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2469,7 +2530,7 @@
        "RTEN  -0.00  "
       ]
      },
-     "execution_count": 316,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2492,15 +2553,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the matrix, PC 1 is highly correlated with predictors relative to other components This also supports the stated variance, as PC 1 can explain approximately 85 percent of the variance in the dataset."
+    "Based on the matrix, \n",
+    "- PC_1 is highly correlated with predictors except CONT relative to other components and PC_1 is perfectlry negatively correlated with predictor ORAL. \n",
+    "- PC_2 is highly correlated with CONT complementing PC_1 component. \n",
+    "- This also supports the stated variance, as PC_1 and PC_2 can explain approximately 95 percent of the variance in the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.285714285714286"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(pca1.explained_variance_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: \n",
+    "- The sum of eigenvalues exceeds 12 (number of variables / predictors)\n",
+    "- The predictors are very skewed skewed in the dataset. Applied transformations (log, squareroot, and 1/squareroot) to normalize the dataset but end up with 2 components of PCA. PCA as a transformation technique does not presume that the variables are normally distributed, but if we want to use PCA for clustering or outer detection, then best practice is to allow transformation in order to distinguish variables / predictors."
+   ]
   },
   {
    "cell_type": "code",
